# leandros

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASE_NOTES.md  x86_64_vars.fd
.cargo/: config.toml
.limine-cache/limine-11.4.1-binary/: BOOTAA64.EFI  BOOTLOONGARCH64.EFI  BOOTRISCV64.EFI
arch/aarch64/: Cargo.toml  leandros-rpi5.ld  leandros.ld
arch/aarch64/src/: exception.rs  exception_asm.s  gic.rs  lib.rs  mmu.rs  paging.rs  smp.rs  timer.rs  uart.rs
arch/x86_64/: Cargo.toml  leandros.ld
arch/x86_64/src/: apic.rs  idt.rs  ioapic.rs  keyboard.rs  lib.rs  paging.rs  smp.rs  timer.rs
boot/: Cargo.toml
boot/src/: device_tree.rs  limine.rs
docs/: aarch64-boot-investigation.md
doomgeneric/: Makefile.leandros  config.h  d_main.c  doom  doom-aarch64  doom-x86_64  doomgeneric.c  doomgeneric.h  doomgeneric_leandros.c  doomgeneric_leandros_drm.c  doomgeneric_sdl.c  doomgeneric_soso.c  i_scale.c  i_sound.c  i_system.c  i_video.c  leandros_sdl.c  leandros_stubs.c  m_misc.c  p_maputl.c  r_draw.c  r_plane.c  r_things.c  r_things.h  stdarg.h  w_file.c  w_file.h  w_file_leandros.c  w_file_stdc.c  w_wad.c
doomgeneric/include/: SDL.h  SDL_mixer.h  assert.h  ctype.h  errno.h  leandros_libc.h  limits.h
doomgeneric/include/sys/: socket.h  stat.h  un.h
drivers/: Cargo.toml
drivers/src/: console_commands.rs  console_properties.rs  drm_console.rs  drm_device_interface.rs  drm_driver.rs  framebuffer.rs  kms.rs  lib.rs  pci.rs  snd.rs  vector_font.rs
drivers/src/drm/: auth.rs  core.rs  device.rs  framebuffer.rs  mod.rs  modes.rs  properties.rs
drivers/usb/: Cargo.toml
drivers/wifi/: Cargo.toml
drivers/wifi/src/: nl80211.rs
elf/src/: lib.rs
ipc/: Cargo.toml
ipc/src/: lib.rs  message.rs  port.rs
kernel/: Cargo.toml
kernel/src/: entry_aarch64.s  entry_x86_64.s  init.rs  main.rs  syscall.rs
lib/: Cargo.toml
limine/: limine.conf
linkers/: aarch64-direct.ld  aarch64.ld  x86_64-direct.ld  x86_64.ld
mm/: Cargo.toml
mm/src/: buddy.rs  lib.rs  paging.rs  slab.rs  vmm.rs
sched/: Cargo.toml
sched/src/: clone.rs  context.rs  lib.rs  runqueue.rs  task.rs
scripts/: build-all.sh  build-userland.sh  deploy-rpi5.sh  deploy-x86_64.sh  run-qemu-kernel.sh  run-qemu.sh  test_locally.sh
servers/drm/: Cargo.toml
servers/drm/src/: lib.rs
servers/evdev/: Cargo.toml
servers/evdev/src/: lib.rs
servers/init/src/: lib.rs
servers/libc-shim/: Cargo.toml
servers/libc-shim/src/: lib.rs
servers/net/src/: lib.rs
servers/pipewire/: Cargo.toml
servers/pipewire/src/: lib.rs
servers/vfs/src/: lib.rs
targets/: aarch64-unknown-kernel.json
userland/: Cargo.toml
userland/aplay/: Cargo.toml
userland/aplay/src/: main.rs
userland/hello/: Cargo.toml
userland/hello/src/: main.rs
userland/init/: Cargo.toml
userland/init/src/: main.rs
userland/libc/: Cargo.toml
userland/libc/src/: io.rs  ipc.rs  lib.rs  mem.rs  process.rs  start.rs  syscall.rs
userland/shell/: Cargo.toml
userland/shell/src/: main.rs
