[workspace]
resolver = "2"
members = [
    "kernel",
    "mm",
    "sched",
    "ipc",
    "capability",
    "elf",
    "servers/proc",
    "servers/vfs",
    "servers/net",
    "servers/tty",
    "servers/libc-shim",
    "servers/init",
    "servers/drm",
    "servers/pipewire",
    "drivers",
    "drivers/usb",
    "drivers/wifi",
    "boot",
    "lib",
    "arch/x86_64",
    "arch/aarch64",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = []

[workspace.dependencies]
bitflags = "2"
spin = "0.9"

[profile.dev]
panic = "abort"


[profile.release]
panic = "abort"
lto = true
opt-level = "s"
