[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kernel"
path = "src/main.rs"

[features]
# Target Raspberry Pi 5 (BCM2712 + RP1).
# Propagates to arch-aarch64 which selects correct MMIO addresses.
rpi5 = ["arch-aarch64/rpi5"]

[dependencies]
mm         = { path = "../mm" }
sched      = { path = "../sched" }
elf        = { path = "../elf" }
ipc        = { path = "../ipc" }
boot       = { path = "../boot" }
drivers    = { path = "../drivers" }
vfs-server  = { path = "../servers/vfs" }
evdev-server = { path = "../servers/evdev" }
drm-server = { path = "../servers/drm" }
net-server  = { path = "../servers/net" }
tty-server  = { path = "../servers/tty" }
init-server = { path = "../servers/init" }
usb     = { path = "../drivers/usb" }
wifi    = { path = "../drivers/wifi" }
leandros-lib = { path = "../lib" }
limine = "0.6.3"
miniz_oxide = { version = "0.7", default-features = false, features = ["with-alloc"] }
bitflags.workspace = true
spin.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
arch-x86_64 = { path = "../arch/x86_64" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
arch-aarch64 = { path = "../arch/aarch64" }
