[package]
name = "arch-x86_64"
version.workspace = true
edition.workspace = true

[dependencies]
boot    = { path = "../../boot" }
leandros-lib = { path = "../../lib" }
mm      = { path = "../../mm" }
sched   = { path = "../../sched" }
evdev-server = { path = "../../servers/evdev" }
bitflags.workspace = true
