[package]
name = "leandros-libc-shim"
version.workspace = true
edition.workspace = true
license.workspace = true

# Built as a static library; linked into every user-space binary before libc.a.
[lib]
name = "leandros_libc_shim"
crate-type = ["staticlib"]

[dependencies]
leandros-lib = { path = "../../lib" }

[features]
default = []
